--- a/authjwt/package.json
+++ b/authjwt/package.json
@@ -29,6 +29,7 @@
     "argon2": "^0.31.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "ethers": "^6.7.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -40,6 +41,7 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
