--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.12.0",
+    "axios": "^1.5.0",
     "ethers": "^5.7.2",
     "next": "latest",
     "react": "18.2.0",
